src/macos.h

#pragma once

#include <stdbool.h>
#include <stddef.h>
#include <stdint.h>

#ifdef __cplusplus
extern "C" {
#endif

#define EXPORT __attribute__((visibility("default")))

EXPORT void cw_nswindow_remove_titlebar(void *ns_window);

typedef struct {
  double x;
  double y;
  double w;
  double h;
} cw_rect_t;

typedef struct {
  double w;
  double h;
} cw_size_t;

EXPORT void cw_nswindow_update_draggable_areas(void *ns_window,
                                               cw_rect_t *exclude,
                                               size_t exclude_count);

EXPORT void cw_nswindow_disable_draggable_areas(void *ns_window);

typedef enum {
  CW_APPEARANCE_AUTO,
  CW_APPEARANCE_LIGHT,
  CW_APPEARANCE_DARK,
} cw_appearance_t;

typedef struct {
  double offset_x;
  double offset_y;
  cw_appearance_t appearance;
  bool custom_inactive_traffic_light;
  int64_t inactive_background_color;
  int64_t inactive_border_color;
  double inactive_border_width;
  bool show_as_inactive_in_key_window;
} cw_traffic_light_config_t;

EXPORT void
cw_nswindow_update_traffic_light(void *ns_window,
                                 const cw_traffic_light_config_t *config);

EXPORT cw_size_t cw_nswindow_traffic_light_size(void *ns_window);

EXPORT void cw_nswindow_request_close(void *ns_window);

EXPORT void cw_nswindow_set_style_mask(void *ns_window,
                                       unsigned long style_mask);

EXPORT unsigned long cw_nswindow_get_style_mask(void *ns_window);

EXPORT void
cw_nswindow_set_collection_behavior(void *ns_window,
                                    unsigned long collection_behavior);

EXPORT unsigned long cw_nswindow_get_collection_behavior(void *ns_window);

typedef struct {
  cw_size_t (*on_window_will_resize)(cw_size_t new_size);
  void (*on_window_will_start_live_resize)();
  void (*on_window_did_end_live_resize)();
  void (*on_window_will_close)();
  void (*on_window_will_enter_fullscreen)();
  void (*on_window_did_enter_fullscreen)();
  void (*on_window_will_exit_fullscreen)();
  void (*on_window_did_exit_fullscreen)();
  cw_rect_t (*on_window_will_use_standard_frame)(cw_rect_t default_frame);
} cw_delegate_config_t;

EXPORT void cw_nswindow_init_delegate(void *ns_window,
                                      cw_delegate_config_t config);

EXPORT void cw_nswindow_set_frame(void *ns_window, cw_rect_t frame);
EXPORT cw_rect_t cw_nswindow_get_frame(void *ns_window);
/// AppKit bottom-left frame (no Flutter Y-flip). Matches legacy window_lifecycle.
EXPORT void cw_nswindow_set_frame_bottom_left(void *ns_window, cw_rect_t frame);
EXPORT cw_rect_t cw_nswindow_get_frame_bottom_left(void *ns_window);
/// Near-fullscreen window on [NSScreen screens][screen_index].frame (width-1).
EXPORT void cw_nswindow_set_fullscreen_on_screen_index(void *ns_window,
                                                       int32_t screen_index);

/// Panel behavior flags for [cw_nswindow_set_panel_flags].
enum {
  CW_PANEL_FLAG_STATIONARY = 1u << 0,
  CW_PANEL_FLAG_IMMOVABLE = 1u << 1,
};
EXPORT void cw_nswindow_set_panel_flags(void *ns_window, uint32_t flags);
EXPORT void cw_nswindow_position_on_screen_index(void *ns_window,
                                                 int32_t screen_index);

EXPORT void cw_nswindow_set_alpha(void *ns_window, double alpha);
EXPORT void cw_nswindow_set_level(void *ns_window, int level);
EXPORT void cw_nswindow_set_ignores_mouse_events(void *ns_window, bool ignores);
EXPORT void cw_nswindow_set_corner_radius(void *ns_window, double radius);
EXPORT void cw_nswindow_set_background_clear(void *ns_window);

EXPORT int32_t cw_nswindow_promote_to_panel(void *ns_window, bool floating);
EXPORT void cw_nswindow_set_shadow(void *ns_window, bool has_shadow);
EXPORT void cw_nswindow_force_redraw(void *ns_window);
EXPORT void cw_nswindow_set_app_window_level(void *ns_window,
                                             int32_t level_offset);
EXPORT void cw_nswindow_make_frameless(void *ns_window);
EXPORT void cw_nswindow_make_titleless(void *ns_window);
EXPORT void cw_nswindow_start_drag(void *ns_window);
EXPORT void cw_nswindow_make_key(void *ns_window);
EXPORT void cw_nswindow_activate_app(void);
EXPORT void cw_nswindow_center(void *ns_window);
EXPORT void cw_nswindow_set_min_size(void *ns_window, double width,
                                     double height);
EXPORT void cw_nswindow_order_front(void *ns_window);
/// Visible frame (excludes menu bar / dock) of [NSScreen screens][index]
/// in the flipped top-left global-union space (same as cw_nswindow_get_frame).
EXPORT cw_rect_t cw_nsscreen_visible_frame(int32_t screen_index);
EXPORT void cw_nswindow_order_out(void *ns_window);
EXPORT void cw_nswindow_set_capture_exclusion(void *ns_window, bool exclude);

typedef void (*cw_window_event_callback_t)(
    int32_t event_type, void *window_handle, const char *title, double x,
    double y, double width, double height, void *context);

// Drag overlay (macOS tab drag image): borderless, click-through NSWindow
// that shows the captured pill following the cursor.
EXPORT void *cw_drag_overlay_create(void);
EXPORT void cw_drag_overlay_set_image(void *handle, const uint8_t *rgba, int32_t width, int32_t height);
EXPORT void cw_drag_overlay_set_frame(void *handle, double x, double y, double w, double h);
EXPORT void cw_drag_overlay_set_frame_bottom_left(void *handle, double x, double y, double w, double h);
EXPORT void cw_drag_overlay_destroy(void *handle);
EXPORT void cw_drag_overlay_mouse_location(double *out_x, double *out_y);
EXPORT void cw_drag_overlay_visible_frame(double *out_x, double *out_y, double *out_w, double *out_h);
EXPORT double cw_drag_overlay_screen_height(void);
EXPORT double cw_drag_overlay_backing_scale(void);
EXPORT int32_t cw_drag_overlay_left_mouse_down(void);
EXPORT int32_t cw_drag_overlay_right_mouse_down(void);

EXPORT void cw_hooks_init(void);
EXPORT void cw_hooks_set_window_event_callback(
    cw_window_event_callback_t callback, void *context);
EXPORT void cw_hooks_dispose(void);
/// Emit WINDOW_EVENT_MOVED for hooks consumers (e.g. drag tracker during performDrag).
EXPORT void cw_hooks_emit_window_moved(void *ns_window);

#ifdef __cplusplus
}
#endif
/// macOS 26+: 1 when the public NSGlassEffectView class exists at runtime.
EXPORT int32_t cw_nswindow_has_liquid_glass(void);

/// macOS 26+: whole-window Liquid Glass (glass becomes the contentView with
/// the Flutter content embedded). [style]: 0 Regular / 1 Clear. No-op below 26.
EXPORT void cw_nswindow_set_glass_backdrop(void *ns_window, int32_t style);

/// macOS 26+: inset Liquid Glass panel behind the content at window-local
/// LOGICAL px (top-left origin), rounded with [corner_radius]; repeated calls
/// replace the previous panel (one glass surface per window). No-op below 26.
EXPORT void cw_nswindow_set_glass_panel(void *ns_window, double x, double y,
                                        double w, double h,
                                        double corner_radius, int32_t style);

/// Per-region click-through: the window stays interactive ONLY inside the
/// given WINDOW-LOCAL LOGICAL rects (flat x,y,w,h quads; count quads);
/// NULL/0 makes the whole window click-through. No-op below macOS 26.
EXPORT void cw_nswindow_set_click_through_rects(void *ns_window,
                                                const double *rects,
                                                size_t rect_count);

/// One-shot NATIVE setup for the middle notification window: fixed-size,
/// centered Flutter content (window frame can animate without the engine's
/// resize synchronizer), Clear/Regular Liquid Glass panel (autoresizes with
/// the window), full click-through, non-draggable. Call once at creation.
EXPORT void cw_nswindow_setup_middle_window(void *ns_window,
                                            double corner_radius,
                                            int32_t style);

/// Scales the middle notification's rendered content via the FlutterView's
/// LAYER transform (GPU compositing — no engine layout / resize sync).
EXPORT void cw_nswindow_set_content_scale(void *ns_window, double scale);

/// [NSWindow movableByWindowBackground]: NO keeps overlay windows
/// non-draggable so clicks reach the Flutter content.
EXPORT void cw_nswindow_set_movable_by_background(void *ns_window,
                                                  bool movable);

/// Re-evaluates per-region click-through now (cursor position -> rect check ->
/// ignoresMouseEvents toggle). Called periodically; no event dependency.
EXPORT void cw_nswindow_eval_click_through(void *ns_window);

/// FULL frame (includes menu bar / dock) of [NSScreen screens][index], in the
/// same flipped top-left global-union space as [cw_nsscreen_visible_frame].
EXPORT cw_rect_t cw_nsscreen_full_frame(int32_t screen_index);