lib/src/macos.g.dart

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint, unused_import
@ffi.DefaultAsset('package:window_toolbox/macos')
library;

import 'dart:ffi' as ffi;

@ffi.Native<ffi.Void Function(ffi.Pointer<ffi.Void>)>()
external void cw_nswindow_remove_titlebar(
  ffi.Pointer<ffi.Void> ns_window,
);

@ffi.Native<
  ffi.Void Function(ffi.Pointer<ffi.Void>, ffi.Pointer<cw_rect_t>, ffi.Size)
>()
external void cw_nswindow_update_draggable_areas(
  ffi.Pointer<ffi.Void> ns_window,
  ffi.Pointer<cw_rect_t> exclude,
  int exclude_count,
);

@ffi.Native<ffi.Void Function(ffi.Pointer<ffi.Void>)>()
external void cw_nswindow_disable_draggable_areas(
  ffi.Pointer<ffi.Void> ns_window,
);

@ffi.Native<
  ffi.Void Function(
    ffi.Pointer<ffi.Void>,
    ffi.Pointer<cw_traffic_light_config_t>,
  )
>()
external void cw_nswindow_update_traffic_light(
  ffi.Pointer<ffi.Void> ns_window,
  ffi.Pointer<cw_traffic_light_config_t> config,
);

@ffi.Native<cw_size_t Function(ffi.Pointer<ffi.Void>)>()
external cw_size_t cw_nswindow_traffic_light_size(
  ffi.Pointer<ffi.Void> ns_window,
);

@ffi.Native<ffi.Void Function(ffi.Pointer<ffi.Void>)>()
external void cw_nswindow_request_close(
  ffi.Pointer<ffi.Void> ns_window,
);

@ffi.Native<ffi.Void Function(ffi.Pointer<ffi.Void>, ffi.UnsignedLong)>()
external void cw_nswindow_set_style_mask(
  ffi.Pointer<ffi.Void> ns_window,
  int style_mask,
);

@ffi.Native<ffi.UnsignedLong Function(ffi.Pointer<ffi.Void>)>()
external int cw_nswindow_get_style_mask(
  ffi.Pointer<ffi.Void> ns_window,
);

@ffi.Native<ffi.Void Function(ffi.Pointer<ffi.Void>, ffi.UnsignedLong)>()
external void cw_nswindow_set_collection_behavior(
  ffi.Pointer<ffi.Void> ns_window,
  int collection_behavior,
);

@ffi.Native<ffi.UnsignedLong Function(ffi.Pointer<ffi.Void>)>()
external int cw_nswindow_get_collection_behavior(
  ffi.Pointer<ffi.Void> ns_window,
);

@ffi.Native<ffi.Void Function(ffi.Pointer<ffi.Void>, cw_delegate_config_t)>()
external void cw_nswindow_init_delegate(
  ffi.Pointer<ffi.Void> ns_window,
  cw_delegate_config_t config,
);

@ffi.Native<ffi.Void Function(ffi.Pointer<ffi.Void>, cw_rect_t)>()
external void cw_nswindow_set_frame(
  ffi.Pointer<ffi.Void> ns_window,
  cw_rect_t frame,
);

@ffi.Native<cw_rect_t Function(ffi.Pointer<ffi.Void>)>()
external cw_rect_t cw_nswindow_get_frame(
  ffi.Pointer<ffi.Void> ns_window,
);

/// AppKit bottom-left frame (no Flutter Y-flip). Matches legacy window_lifecycle.
@ffi.Native<ffi.Void Function(ffi.Pointer<ffi.Void>, cw_rect_t)>()
external void cw_nswindow_set_frame_bottom_left(
  ffi.Pointer<ffi.Void> ns_window,
  cw_rect_t frame,
);

@ffi.Native<cw_rect_t Function(ffi.Pointer<ffi.Void>)>()
external cw_rect_t cw_nswindow_get_frame_bottom_left(
  ffi.Pointer<ffi.Void> ns_window,
);

/// Near-fullscreen window on [NSScreen screens][screen_index].frame (width-1).
@ffi.Native<ffi.Void Function(ffi.Pointer<ffi.Void>, ffi.Int32)>()
external void cw_nswindow_set_fullscreen_on_screen_index(
  ffi.Pointer<ffi.Void> ns_window,
  int screen_index,
);

@ffi.Native<ffi.Void Function(ffi.Pointer<ffi.Void>, ffi.Uint32)>()
external void cw_nswindow_set_panel_flags(
  ffi.Pointer<ffi.Void> ns_window,
  int flags,
);

@ffi.Native<ffi.Void Function(ffi.Pointer<ffi.Void>, ffi.Int32)>()
external void cw_nswindow_position_on_screen_index(
  ffi.Pointer<ffi.Void> ns_window,
  int screen_index,
);

@ffi.Native<ffi.Void Function(ffi.Pointer<ffi.Void>, ffi.Double)>()
external void cw_nswindow_set_alpha(
  ffi.Pointer<ffi.Void> ns_window,
  double alpha,
);

@ffi.Native<ffi.Void Function(ffi.Pointer<ffi.Void>, ffi.Int)>()
external void cw_nswindow_set_level(
  ffi.Pointer<ffi.Void> ns_window,
  int level,
);

@ffi.Native<ffi.Void Function(ffi.Pointer<ffi.Void>, ffi.Bool)>()
external void cw_nswindow_set_ignores_mouse_events(
  ffi.Pointer<ffi.Void> ns_window,
  bool ignores,
);

@ffi.Native<ffi.Void Function(ffi.Pointer<ffi.Void>, ffi.Double)>()
external void cw_nswindow_set_corner_radius(
  ffi.Pointer<ffi.Void> ns_window,
  double radius,
);

@ffi.Native<ffi.Void Function(ffi.Pointer<ffi.Void>)>()
external void cw_nswindow_set_background_clear(
  ffi.Pointer<ffi.Void> ns_window,
);

@ffi.Native<ffi.Int32 Function(ffi.Pointer<ffi.Void>, ffi.Bool)>()
external int cw_nswindow_promote_to_panel(
  ffi.Pointer<ffi.Void> ns_window,
  bool floating,
);

@ffi.Native<ffi.Void Function(ffi.Pointer<ffi.Void>, ffi.Bool)>()
external void cw_nswindow_set_shadow(
  ffi.Pointer<ffi.Void> ns_window,
  bool has_shadow,
);

@ffi.Native<ffi.Void Function(ffi.Pointer<ffi.Void>)>()
external void cw_nswindow_force_redraw(
  ffi.Pointer<ffi.Void> ns_window,
);

@ffi.Native<ffi.Void Function(ffi.Pointer<ffi.Void>, ffi.Int32)>()
external void cw_nswindow_set_app_window_level(
  ffi.Pointer<ffi.Void> ns_window,
  int level_offset,
);

@ffi.Native<ffi.Void Function(ffi.Pointer<ffi.Void>)>()
external void cw_nswindow_make_frameless(
  ffi.Pointer<ffi.Void> ns_window,
);

@ffi.Native<ffi.Void Function(ffi.Pointer<ffi.Void>)>()
external void cw_nswindow_make_titleless(
  ffi.Pointer<ffi.Void> ns_window,
);

@ffi.Native<ffi.Void Function(ffi.Pointer<ffi.Void>)>()
external void cw_nswindow_start_drag(
  ffi.Pointer<ffi.Void> ns_window,
);

@ffi.Native<ffi.Void Function(ffi.Pointer<ffi.Void>)>()
external void cw_nswindow_make_key(
  ffi.Pointer<ffi.Void> ns_window,
);

@ffi.Native<ffi.Void Function()>()
external void cw_nswindow_activate_app();

@ffi.Native<ffi.Void Function(ffi.Pointer<ffi.Void>)>()
external void cw_nswindow_center(
  ffi.Pointer<ffi.Void> ns_window,
);

@ffi.Native<ffi.Void Function(ffi.Pointer<ffi.Void>, ffi.Double, ffi.Double)>()
external void cw_nswindow_set_min_size(
  ffi.Pointer<ffi.Void> ns_window,
  double width,
  double height,
);

@ffi.Native<ffi.Void Function(ffi.Pointer<ffi.Void>)>()
external void cw_nswindow_order_front(
  ffi.Pointer<ffi.Void> ns_window,
);

/// Visible frame (excludes menu bar / dock) of `NSScreen screens[index]`
/// in the flipped top-left global-union space (same as cw_nswindow_get_frame).
@ffi.Native<cw_rect_t Function(ffi.Int32)>()
external cw_rect_t cw_nsscreen_visible_frame(
  int screen_index,
);

/// Hides the window without destroying it ([NSWindow orderOut:] — the
/// window stays alive and re-usable via cw_nswindow_order_front).
@ffi.Native<ffi.Void Function(ffi.Pointer<ffi.Void>)>()
external void cw_nswindow_order_out(
  ffi.Pointer<ffi.Void> ns_window,
);

@ffi.Native<ffi.Void Function(ffi.Pointer<ffi.Void>, ffi.Bool)>()
external void cw_nswindow_set_capture_exclusion(
  ffi.Pointer<ffi.Void> ns_window,
  bool exclude,
);

@ffi.Native<ffi.Pointer<ffi.Void> Function()>()
external ffi.Pointer<ffi.Void> cw_drag_overlay_create();

@ffi.Native<
  ffi.Void Function(
    ffi.Pointer<ffi.Void>,
    ffi.Pointer<ffi.Uint8>,
    ffi.Int32,
    ffi.Int32,
  )
>()
external void cw_drag_overlay_set_image(
  ffi.Pointer<ffi.Void> handle,
  ffi.Pointer<ffi.Uint8> rgba,
  int width,
  int height,
);

@ffi.Native<
  ffi.Void Function(
    ffi.Pointer<ffi.Void>,
    ffi.Double,
    ffi.Double,
    ffi.Double,
    ffi.Double,
  )
>()
external void cw_drag_overlay_set_frame(
  ffi.Pointer<ffi.Void> handle,
  double x,
  double y,
  double w,
  double h,
);

@ffi.Native<
  ffi.Void Function(
    ffi.Pointer<ffi.Void>,
    ffi.Double,
    ffi.Double,
    ffi.Double,
    ffi.Double,
  )
>()
external void cw_drag_overlay_set_frame_bottom_left(
  ffi.Pointer<ffi.Void> handle,
  double x,
  double y,
  double w,
  double h,
);

@ffi.Native<ffi.Void Function(ffi.Pointer<ffi.Void>)>()
external void cw_drag_overlay_destroy(
  ffi.Pointer<ffi.Void> handle,
);

@ffi.Native<
  ffi.Void Function(ffi.Pointer<ffi.Double>, ffi.Pointer<ffi.Double>)
>()
external void cw_drag_overlay_mouse_location(
  ffi.Pointer<ffi.Double> out_x,
  ffi.Pointer<ffi.Double> out_y,
);

@ffi.Native<
  ffi.Void Function(
    ffi.Pointer<ffi.Double>,
    ffi.Pointer<ffi.Double>,
    ffi.Pointer<ffi.Double>,
    ffi.Pointer<ffi.Double>,
  )
>()
external void cw_drag_overlay_visible_frame(
  ffi.Pointer<ffi.Double> out_x,
  ffi.Pointer<ffi.Double> out_y,
  ffi.Pointer<ffi.Double> out_w,
  ffi.Pointer<ffi.Double> out_h,
);

@ffi.Native<ffi.Double Function()>()
external double cw_drag_overlay_screen_height();

@ffi.Native<ffi.Double Function()>()
external double cw_drag_overlay_backing_scale();

@ffi.Native<ffi.Int32 Function()>()
external int cw_drag_overlay_left_mouse_down();

@ffi.Native<ffi.Int32 Function()>()
external int cw_drag_overlay_right_mouse_down();

@ffi.Native<ffi.Void Function()>()
external void cw_hooks_init();

@ffi.Native<
  ffi.Void Function(
    ffi.Pointer<
      ffi.NativeFunction<
        ffi.Void Function(
          ffi.Int32 event_type,
          ffi.Pointer<ffi.Void> window_handle,
          ffi.Pointer<ffi.Char> title,
          ffi.Double x,
          ffi.Double y,
          ffi.Double width,
          ffi.Double height,
          ffi.Pointer<ffi.Void> context,
        )
      >
    >,
    ffi.Pointer<ffi.Void>,
  )
>()
external void cw_hooks_set_window_event_callback(
  ffi.Pointer<
    ffi.NativeFunction<
      ffi.Void Function(
        ffi.Int32 event_type,
        ffi.Pointer<ffi.Void> window_handle,
        ffi.Pointer<ffi.Char> title,
        ffi.Double x,
        ffi.Double y,
        ffi.Double width,
        ffi.Double height,
        ffi.Pointer<ffi.Void> context,
      )
    >
  >
  callback,
  ffi.Pointer<ffi.Void> context,
);

@ffi.Native<ffi.Void Function()>()
external void cw_hooks_dispose();

/// Emit WINDOW_EVENT_MOVED for hooks consumers (e.g. drag tracker during performDrag).
@ffi.Native<ffi.Void Function(ffi.Pointer<ffi.Void>)>()
external void cw_hooks_emit_window_moved(
  ffi.Pointer<ffi.Void> ns_window,
);

final class cw_rect_t extends ffi.Struct {
  @ffi.Double()
  external double x;

  @ffi.Double()
  external double y;

  @ffi.Double()
  external double w;

  @ffi.Double()
  external double h;
}

final class cw_size_t extends ffi.Struct {
  @ffi.Double()
  external double w;

  @ffi.Double()
  external double h;
}

enum cw_appearance_t {
  CW_APPEARANCE_AUTO(0),
  CW_APPEARANCE_LIGHT(1),
  CW_APPEARANCE_DARK(2);

  final int value;
  const cw_appearance_t(this.value);

  static cw_appearance_t fromValue(int value) => switch (value) {
    0 => CW_APPEARANCE_AUTO,
    1 => CW_APPEARANCE_LIGHT,
    2 => CW_APPEARANCE_DARK,
    _ => throw ArgumentError('Unknown value for cw_appearance_t: $value'),
  };
}

final class cw_traffic_light_config_t extends ffi.Struct {
  @ffi.Double()
  external double offset_x;

  @ffi.Double()
  external double offset_y;

  @ffi.UnsignedInt()
  external int appearanceAsInt;

  cw_appearance_t get appearance => cw_appearance_t.fromValue(appearanceAsInt);

  @ffi.Bool()
  external bool custom_inactive_traffic_light;

  @ffi.Int64()
  external int inactive_background_color;

  @ffi.Int64()
  external int inactive_border_color;

  @ffi.Double()
  external double inactive_border_width;

  @ffi.Bool()
  external bool show_as_inactive_in_key_window;
}

final class cw_delegate_config_t extends ffi.Struct {
  external ffi.Pointer<
    ffi.NativeFunction<cw_size_t Function(cw_size_t new_size)>
  >
  on_window_will_resize;

  external ffi.Pointer<ffi.NativeFunction<ffi.Void Function()>>
  on_window_will_start_live_resize;

  external ffi.Pointer<ffi.NativeFunction<ffi.Void Function()>>
  on_window_did_end_live_resize;

  external ffi.Pointer<ffi.NativeFunction<ffi.Void Function()>>
  on_window_will_close;

  external ffi.Pointer<ffi.NativeFunction<ffi.Void Function()>>
  on_window_will_enter_fullscreen;

  external ffi.Pointer<ffi.NativeFunction<ffi.Void Function()>>
  on_window_did_enter_fullscreen;

  external ffi.Pointer<ffi.NativeFunction<ffi.Void Function()>>
  on_window_will_exit_fullscreen;

  external ffi.Pointer<ffi.NativeFunction<ffi.Void Function()>>
  on_window_did_exit_fullscreen;

  external ffi.Pointer<
    ffi.NativeFunction<cw_rect_t Function(cw_rect_t default_frame)>
  >
  on_window_will_use_standard_frame;
}

/// macOS 26+: 1 when the public NSGlassEffectView exists at runtime.
@ffi.Native<ffi.Int32 Function()>()
external int cw_nswindow_has_liquid_glass();

/// macOS 26+: whole-window Liquid Glass (glass = contentView, content
/// embedded). style: 0 Regular / 1 Clear. No-op below 26.
@ffi.Native<ffi.Void Function(ffi.Pointer<ffi.Void>, ffi.Int32)>()
external void cw_nswindow_set_glass_backdrop(
  ffi.Pointer<ffi.Void> ns_window,
  int style,
);

/// macOS 26+: inset Liquid Glass panel behind the content (window-local
/// LOGICAL px, top-left origin). style: 0 Regular / 1 Clear. No-op below 26.
@ffi.Native<
  ffi.Void Function(
    ffi.Pointer<ffi.Void>,
    ffi.Double,
    ffi.Double,
    ffi.Double,
    ffi.Double,
    ffi.Double,
    ffi.Int32,
  )
>()
external void cw_nswindow_set_glass_panel(
  ffi.Pointer<ffi.Void> ns_window,
  double x,
  double y,
  double w,
  double h,
  double corner_radius,
  int style,
);

/// Per-region click-through: interactive only inside the given window-local
/// LOGICAL rects (flat x,y,w,h doubles; rect_count quads). 0/NULL = fully
/// click-through.
@ffi.Native<
  ffi.Void Function(
    ffi.Pointer<ffi.Void>,
    ffi.Pointer<ffi.Double>,
    ffi.Size,
  )
>()
external void cw_nswindow_set_click_through_rects(
  ffi.Pointer<ffi.Void> ns_window,
  ffi.Pointer<ffi.Double> rects,
  int rect_count,
);

/// One-shot setup for the middle notification window (fixed-size centered
/// content + glass panel + full click-through + non-draggable).
@ffi.Native<
  ffi.Void Function(ffi.Pointer<ffi.Void>, ffi.Double, ffi.Int32)
>()
external void cw_nswindow_setup_middle_window(
  ffi.Pointer<ffi.Void> ns_window,
  double corner_radius,
  int style,
);

/// Scales the middle notification's rendered content via the FlutterView's
/// layer transform (GPU compositing) — the window-size animation companion.
@ffi.Native<ffi.Void Function(ffi.Pointer<ffi.Void>, ffi.Double)>()
external void cw_nswindow_set_content_scale(
  ffi.Pointer<ffi.Void> ns_window,
  double scale,
);

/// NSWindow movableByWindowBackground (NO keeps overlay windows non-draggable
/// so clicks reach Flutter content).
@ffi.Native<ffi.Void Function(ffi.Pointer<ffi.Void>, ffi.Bool)>()
external void cw_nswindow_set_movable_by_background(
  ffi.Pointer<ffi.Void> ns_window,
  bool movable,
);

/// Re-evaluates per-region click-through right now (cursor position -> rect
/// check -> setIgnoresMouseEvents toggle). No event delivery dependency.
@ffi.Native<ffi.Void Function(ffi.Pointer<ffi.Void>)>()
external void cw_nswindow_eval_click_through(
  ffi.Pointer<ffi.Void> ns_window,
);

/// FULL frame (includes menu bar / dock) of screen [index], flipped top-left
/// global-union space.
@ffi.Native<cw_rect_t Function(ffi.Int32)>()
external cw_rect_t cw_nsscreen_full_frame(
  int screen_index,
);
